[gd_scene load_steps=2 format=3 uid="uid://t2dui8ppm3a4"]

[ext_resource type="Script" path="res://Scenes/Credits/Credits.gd" id="4"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HeaderSpace" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1024)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="FooterSpace" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1024)
layout_mode = 2

[node name="ScrollResetTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="scroll_ended" from="ScrollContainer" to="." method="_on_ScrollContainer_scroll_ended"]
[connection signal="gui_input" from="ScrollContainer/VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_gui_input"]
[connection signal="meta_clicked" from="ScrollContainer/VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="timeout" from="ScrollResetTimer" to="." method="_on_ScrollResetTimer_timeout"]
